lb.tf
resource "aws_lb" "ecs_alb" {
  name               = "ecs-albnim"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.ecs_sg.id]
  subnets            = aws_subnet.public[*].id

  tags = {
    Name = "ecs-alb"
  }
}
